<resources>
    <string name="app_name">ListadoAlumnos</string>
    <string name="action_settings">Settings</string>
    <string name="volver"><![CDATA[< Volver]]></string>
    <string name="datail_title">Datos del alumno</string>
    <string name="id">Id: </string>
    <string name="nombres">Nombres: </string>
    <string name="apellidos">Apellidos: </string>
    <string name="correo">Correo: </string>
    <string name="imagenPerfil">Imagen de perfil: </string>
    <string name="nuevoAlumnoTitle">Nuevo alumno</string>
    <string name="nombresEdit">Nombres</string>
    <string name="apellidosEdit">Apellidos</string>
    <string name="correoEdit">Correo</string>
    <string name="delete">Borrar</string>
    <string name="channel_name">New Alumno</string>
    <string name="channel_description">Channel for new alumnos</string>
    <string name="newAlumnoAdded">New Alumno successfully added</string>
</resources>
